# love-rs

./: Cargo.toml  README.md
src/: lib.rs  package.rs  project.rs
src/binary/: binary.rs  install.rs  mod.rs  repo.rs
src/project/: project.rs
tests/: package.rs  test.rs
tests/files/: 0.10.2.love  11.0.love  love_no_ver.love
tests/files/love_folder_0.10.2/: conf.lua  main.lua
tests/files/love_folder_0.10.2/images/: file.lua
tests/files/love_folder_0.10.2/src/: class.lua
tests/files/love_folder_no_ver/: conf.lua
