[package]
name = "love"
version = "0.1.0"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
regex = "0.2.5"
zip = "0.3.0"
toml = "0.4.5"
reqwest = "0.8.5"
serde_json = "1.0.9"
ansi_term = "0.10.2"

version = { git = "https://gitlab.com/Snsvrno/version-lp-rs", tag = "0.1.3" }
platform = { git = "https://gitlab.com/Snsvrno/platform-lp-rs", tag = "0.1.4" }
download = { git = "https://gitlab.com/Snsvrno/download-lp-rs", tag = "0.1.1" }
output = { git = "https://gitlab.com/Snsvrno/output-lp-rs", tag = "0.1.0" }
archives = { path = "../../libraries/archives-lp-rs"}
lpsettings = { git = "https://gitlab.com/Snsvrno/lpsettings", tag = "0.1.4" }