[package]
name = "love"
version = "0.1.1"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
regex = "0.2.5"
zip = "0.3.0"
toml = "0.4.5"
reqwest = "0.8.5"
serde_json = "1.0.9"
ansi_term = "0.10.2"

archive = { git = "https://github.com/Snsvrno/archive-lp-rs", tag = "0.1.0" }
output = { git = "https://github.com/Snsvrno/output-lp-rs", tag = "0.1.0" }
version = { git = "https://github.com/Snsvrno/version-lp-rs", tag = "0.1.4" }
platform = { git = "https://github.com/Snsvrno/platform-lp-rs", tag = "0.1.4" }
download = { git = "https://github.com/Snsvrno/download-lp-rs", tag = "0.1.1" }
lpsettings = { git = "https://github.com/Snsvrno/lpsettings-rs", tag = "0.1.4" }